# object_keypoints_ros

./: .gitignore  CMakeLists.txt  package.xml  setup.py
config/: calibration.yaml  valve.json  valve.rviz
keypoint_msgs/: CMakeLists.txt  package.xml
keypoint_msgs/include/keypoint_msgs/: conversions.h
keypoint_msgs/msg/: KeypointsArray.msg  ObjectsArray.msg  keypoint.msg
keypoint_msgs/src/: conversions.cpp
keypoint_msgs/unittest/: conversions_test.cpp
launch/: keypoints.launch
models/: autoinjector.pt  valve_depth.pt
msg/: Keypoints.msg
object_keypoints_ros/: CMakeLists.txt  package.xml
object_keypoints_ros/config/: vis_1.rviz
object_keypoints_ros/launch/: keypoints.launch
object_keypoints_ros/scripts/: cylinder_fit.py  msg_visualization.py  run_pipeline.py
scripts/: keypoints_detection.py  keypoints_perception.py  run_pipeline.py
srv/: KeypointsDetection.srv  KeypointsPerception.srv
