<?xml version="1.0"?>
<package format="2">
  <name>keypoint_msgs</name>
  <version>0.0.0</version>
  <description>The keypoint_msgs package</description>

  <maintainer email="boysun@ethz.ch">Boyang Sun</maintainer>

  <license>TODO</license>
  <author email="boysun@ethz.ch">Boyang Sun</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>message_generation</depend>

  <exec_depend>message_runtime</exec_depend>

</package>
