<?xml version="1.0"?>
<package format="2">
  <name>object_keypoints_ros</name>
  <version>0.1.0</version>
  <description>Tracking keypoints on objects.</description>

  <maintainer email="boyang@ethz.ch">boyang</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>rospy</depend>
  <depend>eigen</depend>
  <depend>keypoint_msgs</depend>

</package>
